--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@azure/msal-node": "^5.0.2",
     "amqplib": "^0.10.9",
     "bcryptjs": "^3.0.3",
+    "connect-timeout": "^1.9.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
