--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
+    "morgan": "^1.10.1",
     "mysql2": "^3.16.1",
     "redis": "^5.10.0",
     "sequelize": "^6.37.7",
